2017-03-03  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added

2017-03-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Initial version

	* DESCRIPTION (SystemRequirements): Note C++14 requirement,
	mention optional PAPI library
